--- a/BreastCancerPrediction.ipynb
+++ b/BreastCancerPrediction.ipynb
@@ -160,7 +160,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"D:\\CodersCaves_Inten\\Git\\CVIP-DataScience\\Phase_1_Project\\BreastCancerPrediction\\data.csv\") #read the csv file using pandas"
+    "dataset = pd.read_csv(\"D:\\BreastCancerPrediction\\data.csv\") #read the csv file using pandas"
    ]
   },
   {
